boinc (6.13.12+dfsg-1) unstable; urgency=low

  * New upstream version.
  * Starting only at runlevel 4 and 5 (lp: #820246), possibly.
  * Stopping also at runlevel 2 and 3

 -- Steffen Moeller <moeller@debian.org>  Sun, 13 Nov 2011 17:38:16 +0100

boinc (6.13.10+dfsg-1) unstable; urgency=low

  * New upstream version.

 -- Steffen Moeller <moeller@debian.org>  Sun, 30 Oct 2011 00:32:49 +0200

boinc (6.13.6+dfsg-2) unstable; urgency=low

  * Fixing FTBFS (Closes: #644796).
  * substituted install target with override_dh_auto_install

 -- Steffen Moeller <moeller@debian.org>  Sun, 09 Oct 2011 15:50:33 +0200

boinc (6.13.6+dfsg-1) unstable; urgency=low

  * New upstream version.

 -- Steffen Moeller <moeller@debian.org>  Sat, 08 Oct 2011 14:27:25 +0200

boinc (6.13.1+dfsg-3) UNRELEASED; urgency=low

  * Fixed lintian warning for stripchart.

 -- Steffen Moeller <moeller@debian.org>  Mon, 08 Aug 2011 01:36:51 +0200

boinc (6.13.1+dfsg-2) unstable; urgency=low

  * Bringing notify patch to unstable.
  * Adjusted build dependency to libjpeg-dev (Closes: #641093)
  * Further improvements on stripchart.

 -- Steffen Moeller <moeller@debian.org>  Mon, 08 Aug 2011 01:36:51 +0200

boinc (6.13.1+dfsg-1) experimental; urgency=low

  * New upstream version
  * Added boinc-cgi-stripchart package
  * Michael's libnotify patch from 6.12.33+dfsg-1.1 not yet included

 -- Steffen Moeller <moeller@debian.org>  Sun, 24 Jul 2011 22:20:04 +0200

boinc (6.12.33+dfsg-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Port to libnotify 0.7. (Closes: #636296)
    - Bump Build-Depends on libnotify to (>= 0.7.0).
    - Add debian/patches/libnotify-0.7.patch.
    - Update build system to properly set gtk+-2.0 cflags/ldflags for the
      boincmgr GUI application.
    - Update to the new libnotify 0.7 API.

 -- Michael Biebl <biebl@debian.org>  Sat, 06 Aug 2011 05:50:23 +0200

boinc (6.12.33+dfsg-1) unstable; urgency=low

  [Steffen]
  * New upstream version.